--- a/programm/bild.html
+++ b/programm/bild.html
@@ -78,7 +78,7 @@
                 Bei der Auswahl "Text" öffnet sich eine Textbox, in der du den anzuzeigenden Text eintragen kannst. (siehe unten)
             </details>
             <details>
-                <summary>Sounddatei:</summary>
+                <summary>Abbildung:</summary>
                 Bei der Auswahl "Abbildung" kannst du aus vielen verschiedenen vorinstallierten Bilddateien auswählen, oder eine eigene Datei nutzen.
             </details>
             <details>
