--- a/view.html
+++ b/view.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Präsentationen - Übersicht</title>
     <link rel="stylesheet" href="/view.css">
+    <link rel="icon" href="icon.png">
+    <meta name="description" content="Alle Präsentationen aus der Lego Roboter AG">
+    <meta property="og:site_name" content="Lego Roboter AG">
+    <meta property="og:image" content="icon.png">
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             // Map of query strings to corresponding PDF files
