--- a/view.html
+++ b/view.html
@@ -77,7 +77,7 @@
                         13.12.2024
                     </div>
                 </a>
-                <a class="gridpart disabled" href="">
+                <a class="gridpart disabled" href="?03">
                     <div class="cover">
                         <img src="">
                     </div>
