adding a new presentation

--- a/view.html
+++ b/view.html
@@ -77,15 +77,15 @@
                         13.12.2024
                     </div>
                 </a>
-                <a class="gridpart disabled" href="?03">
+                <a class="gridpart" href="?03">
                     <div class="cover">
-                        <img src="">
+                        <img src="/Präsentation NXT/3 - Sound/Sound.png">
                     </div>
                     <div class="name">
                         03 - Sound abspielen
                     </div>
                     <div class="datum">
-                        20.12.2024
+                        03.01.2025
                     </div>
                 </a>
                 <a class="gridpart disabled" href="">
