adding a new presentation

--- a/view.html
+++ b/view.html
@@ -88,23 +88,15 @@
                         10.01.2025
                     </div>
                 </a>
-                <a class="gridpart disabled" href="?04">
+                <a class="gridpart" href="?04">
                     <div class="cover">
-                        <img src="">
+                        <img src="/Präsentation NXT/4 - Display/AnzeigeBG.png">
                     </div>
                     <div class="name">
                         04 - Anzeige benutzen
                     </div>
                     <div class="datum">
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-                        17.01.2025
-=======
-                        31.01.2025
->>>>>>> Stashed changes
-=======
-                        31.01.2025
->>>>>>> Stashed changes
+                        21.03.2025
                     </div>
                 </a>
                 <a class="gridpart disabled" href="?05">
@@ -115,15 +107,7 @@
                         05 - Knopf
                     </div>
                     <div class="datum">
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-                        24.01.2025
-=======
-                        14.03.2025
->>>>>>> Stashed changes
-=======
-                        14.03.2025
->>>>>>> Stashed changes
+                        28.03.2025
                     </div>
                 </a>
                 <a class="gridpart disabled" href="?06">
@@ -134,15 +118,7 @@
                         06 - Warten
                     </div>
                     <div class="datum">
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-                        31.01.2025
-=======
-                        21.03.2025
->>>>>>> Stashed changes
-=======
-                        21.03.2025
->>>>>>> Stashed changes
+                        04.04.2025
                     </div>
                 </a>
             </div>
