adding a new presentation

--- a/view.html
+++ b/view.html
@@ -21,9 +21,11 @@
                 "05": "/Präsentation NXT/5 - Knopf/Knopf.pdf",
                 "06": "/Präsentation NXT/6 - Warten/Warten.pdf",
                 "07": "/Präsentation NXT/7 - Schleife/Schleife.pdf",
-                "08": "/Präsentation NXT/8 - Ultraschall/Ultraschall.pdf",
-                "09": "/Präsentation NXT/9 - IntToStr/IntToStr.pdf",
-                "10": "/Präsentation NXT/10 - Variablen/Variablen.pdf",
+                //Pause: Türrahmen-Bumper Programmieren
+                "08": "/Präsentation NXT/8 - Bumper/Bumper.pdf",
+                "09": "/Präsentation NXT/9 - Ultraschall/Ultraschall.pdf",
+                "10": "/Präsentation NXT/10 - IntToStr/IntToStr.pdf",
+                "11": "/Präsentation NXT/11 - Variablen/Variablen.pdf",
             };
             // Extract query string manually (everything after '?')
             const queryString = window.location.search.slice(1); // Removes the `?`
@@ -99,9 +101,9 @@
                         21.03.2025
                     </div>
                 </a>
-                <a class="gridpart disabled" href="?05">
+                <a class="gridpart" href="?05">
                     <div class="cover">
-                        <img src="">
+                        <img src="/Präsentation NXT/5 - Knopf/KnopfBG.png">
                     </div>
                     <div class="name">
                         05 - Knopf
@@ -119,6 +121,28 @@
                     </div>
                     <div class="datum">
                         04.04.2025
+                    </div>
+                </a>
+                <a class="gridpart disabled" href="?07">
+                    <div class="cover">
+                        <img src="">
+                    </div>
+                    <div class="name">
+                        07 - Schleife
+                    </div>
+                    <div class="datum">
+                        11.04.2025
+                    </div>
+                </a>
+                <a class="gridpart disabled" href="?08">
+                    <div class="cover">
+                        <img src="">
+                    </div>
+                    <div class="name">
+                        08 - komplexes Programm
+                    </div>
+                    <div class="datum">
+                        02.05.2025
                     </div>
                 </a>
             </div>
