adding a new Lesson

--- a/view.html
+++ b/view.html
@@ -131,15 +131,15 @@
                     </div>
                 </a>
                 <!--Loop-->
-                <a class="gridpart disabled" href="?07">
+                <a class="gridpart" href="?07">
                     <div class="cover">
-                        <img src="">
+                        <img src="/Präsentation NXT/7 - Schleife/SchleifeBG.png">
                     </div>
                     <div class="name">
                         07 - Schleife
                     </div>
                     <div class="datum">
-                        11.04.2025
+                        09.05.2025
                     </div>
                 </a>
                 <!--Bumper-->
@@ -151,7 +151,7 @@
                         08 - Bumper
                     </div>
                     <div class="datum">
-                        02.05.2025
+                        16.05.2025
                     </div>
                 </a>
                 <!--Ultrasonic-->
@@ -163,7 +163,7 @@
                         09 - Ultraschall
                     </div>
                     <div class="datum">
-                        09.05.2025
+                        23.05.2025
                     </div>
                 </a>
                 <!--Variable-->
@@ -175,7 +175,7 @@
                         10 - Komplexes Programmieren - Variablen
                     </div>
                     <div class="datum">
-                        16.05.2025
+                        30.05.2025
                     </div>
                 </a>
                 <!--IntToStr-->
@@ -187,7 +187,7 @@
                         11 - Komplexes Programmieren - IntToStr
                     </div>
                     <div class="datum">
-                        23.05.2025
+                        06.06.2025
                     </div>
                 </a>
             </div>
