adding a new presentation

--- a/view.html
+++ b/view.html
@@ -143,9 +143,9 @@
                     </div>
                 </a>
                 <!--Bumper-->
-                <a class="gridpart disabled" href="?08">
+                <a class="gridpart" href="?08">
                     <div class="cover">
-                        <img src="">
+                        <img src="/Präsentation NXT/8 - Bumper/BumperBG.png">
                     </div>
                     <div class="name">
                         08 - Bumper
