adding a new lecture

--- a/view.html
+++ b/view.html
@@ -23,7 +23,7 @@
                 "07": "/Präsentation NXT/7 - Schleife/Schleife.pdf",
                 //Pause: Türrahmen-Bumper Programmieren
                 "08": "/Präsentation NXT/8 - Bumper/Bumper.pdf",
-                "09": "/Präsentation NXT/9 - Ultraschall/Ultraschall.pdf",
+                "09": "/Präsentation NXT/9 - Ultrasonic/Ultrasonic.pdf",
                 "10": "/Präsentation NXT/10 - Variablen/Variablen.pdf",
                 "11": "/Präsentation NXT/11 - IntToStr/IntToStr.pdf",
             };
@@ -155,9 +155,9 @@
                     </div>
                 </a>
                 <!--Ultrasonic-->
-                <a class="gridpart disabled" href="?09">
+                <a class="gridpart" href="?09">
                     <div class="cover">
-                        <img src="">
+                        <img src="/Präsentation NXT/9 - Ultrasonic/UltrasonicBG.png">
                     </div>
                     <div class="name">
                         09 - Ultraschall
