adding a new lesson

--- a/view.html
+++ b/view.html
@@ -24,7 +24,7 @@
                 //Pause: Türrahmen-Bumper Programmieren
                 "08": "/Präsentation NXT/8 - Bumper/Bumper.pdf",
                 "09": "/Präsentation NXT/9 - Ultrasonic/Ultrasonic.pdf",
-                "10": "/Präsentation NXT/10 - Variablen/Variablen.pdf",
+                "10": "/Präsentation NXT/10 - Variable/Variable.pdf",
                 "11": "/Präsentation NXT/11 - IntToStr/IntToStr.pdf",
             };
             // Extract query string manually (everything after '?')
@@ -163,19 +163,19 @@
                         09 - Ultraschall
                     </div>
                     <div class="datum">
-                        23.05.2025
+                        12.06.2025
                     </div>
                 </a>
                 <!--Variable-->
-                <a class="gridpart disabled" href="?10">
+                <a class="gridpart" href="?10">
                     <div class="cover">
-                        <img src="">
+                        <img src="/Präsentation NXT/10 - Variable/VariableCover.png">
                     </div>
                     <div class="name">
                         10 - Komplexes Programmieren - Variablen
                     </div>
                     <div class="datum">
-                        30.05.2025
+                        27.06.2025
                     </div>
                 </a>
                 <!--IntToStr-->
